button overlaping and alignment is fixed

--- a/ui.apps/src/main/content/jcr_root/apps/hclecomm/components/content/productdetails/clientlibs/less/productdetails.less
+++ b/ui.apps/src/main/content/jcr_root/apps/hclecomm/components/content/productdetails/clientlibs/less/productdetails.less
@@ -25,8 +25,13 @@
 		width: 55%;
 	}
 	.product-details-cmp__product-details {
-		width: 45%;
-	}
+     width: 83%;
+     margin-left: 10%;
+     @media (max-width: 768px) {
+   	 margin-left: 0%;
+ 	}
+ }
+
 	.product-details-cmp__prduct-name {
 		font-size: 22px;
 		color: #333333;
@@ -177,7 +182,8 @@
 	}
 }
 .cmp-pdp-title{
-    margin: -25px 0px;
+ margin: -25px 0px;
+ margin-left: 10%;
 }
 @media (max-width: 650px) {
  .cmp-pdp-title {
